[tool.poetry]
name = "django-passkeys"
version = "0.6.0"
description = "A Django Authentication Backend for Passkeys"
authors = ["Mohamed El-Kalioby"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.2"
django-sslserver = "^0.22"
fido2 = "^1.1.0"
user-agents = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
